Jann 30/objects/RFA_Approver__c.object
<CustomObject>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <controllingField>UserRole__c</controllingField>
            <picklistValues>
                <fullName>1. Key Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Senior Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_on_approver__c</fullName>
        <label>Level on approver</label>
        <picklist>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFA_COA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA COA Group</label>
        <referenceTo>RFA_COA_Group__c</referenceTo>
        <relationshipName>RFA_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserName</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFA_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>UserRole</label>
        <picklist>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Creator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Copy Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Point of Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>approver_role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>approver role</label>
        <referenceTo>New_RFA_Approver_Group__c</referenceTo>
        <relationshipName>RFA_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RFA Approver_old</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RFA_COA_Group__c</columns>
        <columns>UserName__c</columns>
        <columns>Level__c</columns>
        <columns>UserRole__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>RFA Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFA Approvers_old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>